fix: Resolve header z-index issue on scroll-new home

--- a/frontend/app/globals.css
+++ b/frontend/app/globals.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Cherry+Bomb+One&display=swap');
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
@@ -68,6 +69,16 @@ body {
     --chart-4: 280 65% 60%;
     --chart-5: 340 75% 55%;
   }
+}
+
+/* globals.css */
+.mask-wave {
+  -webkit-mask-image: url('/wave-mask.svg');
+  -webkit-mask-repeat: no-repeat;
+  -webkit-mask-size: 100% 100%;
+  mask-image: url('/wave-mask.svg');
+  mask-repeat: no-repeat;
+  mask-size: 100% 100%;
 }
 
 
